# SDL_test

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: application.cpp  application.hpp  colors.hpp  core.hpp  log.cpp  log.hpp
src/scene/: object.cpp  object.hpp  scene.cpp  scene.hpp
src/scene/objects/: object_types.hpp  player_controller.cpp  player_controller.hpp  tile.cpp  tile.hpp
src/scene/scenes/: default_scene.cpp  default_scene.hpp
src/scenes/: object.cpp  object.hpp  scene.hpp
src/serializer/: serializable.hpp  serializer.hpp
